@@ -2,7 +2,7 @@ Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
 Version: 1.2.0
-Date: 2012-11-16
+Date: 2013-1-11
 Depends: methods, GSEABase, DESeq
 Imports: Biobase, limma (>= 3.12.1), GSEAlm, Category, bigmemory, bigmemoryExtras (>=
         1.1.2), Matrix (>= 1.0.9), parallel, annotate, genefilter
